Добавляет жизнь в Израиле

--- a/source/index.html
+++ b/source/index.html
@@ -53,12 +53,13 @@
       грант от 4200 до 8400$.</p>
 
     <div class="about__video-container">
-      <img class="about__video-pic big-screen" width="870" height="460" src="img/programs-desktop@1x.png" alt="Девушка"
-           srcset="img/programs-desktop@2x.png">
 
-      <!-- 1х: 320px; 2x: 605px -->
-      <img class="about__video-pic small-screen" width="320" height="224" src="img/programs-phone@1x.png" alt="Девушка"
-           srcset="img/programs-phone@2x.png">
+        <img class="about__video-pic big-screen" width="870" height="460" src="img/programs-desktop@1x.png" alt="Студенты" srcset="img/programs-desktop@2x.png">
+
+        <!-- 1х: 320px; 2x: 605px -->
+        <img class="about__video-pic small-screen" width="320" height="224" src="img/about-phone@1x.png" alt="Студенты" srcset="img/about-phone@2x.png">
+
+
 
       <div class="about__play">
         <button class="about__play-btn">
@@ -70,8 +71,6 @@
           </svg>
         </button>
       </div>
-    </div>
-
   </section>
 
   <section class="programs">
@@ -208,7 +207,7 @@
         <li class="content__item">
           <h3 class="content__title">Академические</h3>
           <p class="content__text">Провести семестр или год за рубежом, знакомясь с различными культурами и идеями,
-            традициями и стилем жизни —т вот что такое учеба за границей! Израиль — это не только центр религиозного
+            традициями и стилем жизни — вот что такое учеба за границей! Израиль — это не только центр религиозного
             мира, это также академический центр, живая лаборатория идей и творческого исследования.</p>
 
           <p class="content__text">Может быть, Вы заинтересованы в изучении социологии, мира, юриспруденции, биологии,
@@ -249,15 +248,206 @@
     <p class="feedback__text">Оставьте свой телефон и мы свяжемся с вами, подберём куратора и ответим на все вопросы! </p>
     <form action="" class="feedback__form">
       <p class="feedback__wrapper">
-        <input type="text" class="feedback__input" placeholder="Телефон">
+        <input type="text" name="phone-number" class="feedback__input" placeholder="Телефон">
         <button class="button feedback__btn-submit">перезвоните мне</button>
       </p>
     </form>
   </section>
 
+  <section class="terms">
+    <div class="terms__container">
+      <h2 class="terms__title">Как поехать</h2>
+      <p class="terms__text">Чтобы узнать подробнее о программе, свяжитесь с координатором в вашем городе. Вы получите актуальные сведения о доступных программах и городах, в которых можете пройти программу.</p>
+      <b class="terms__slogan">Чтобы иметь возможность получить грант на обучение от 4200 до 8400$, вы должны:</b>
+      <ul class="terms__list">
+        <li class="terms__item">
+          <span class="terms__item-number">1</span>
+          <p class="terms__item-term">Быть в возрасте от 16 до 30 лет</p>
+        </li>
+        <li class="terms__item">
+          <span class="terms__item-number">2</span>
+          <p class="terms__item-term">Иметь оконченное среднее образование</p>
+        </li>
+        <li class="terms__item">
+          <span class="terms__item-number">3</span>
+          <p class="terms__item-term">Иметь документально подтверждённые еврейские корни и пройти консульскую проверку</p>
+        </li>
+        <li class="terms__item">
+          <span class="terms__item-number">4</span>
+          <p class="terms__item-term">За последние 2 года быть не больше 3х месяцев
+            подряд непрерывно в Израиле.</p>
+        </li>
+      </ul>
+      <p class="terms__note">Если вы не подходите по этим правилам, вы всё равно можете
+        принять участие в программе «Маса», оплатив её полную стоимость.</p>
+    </div>
+
+  </section>
+
+  <section class="photos">
+    <h2 class="photos__title">Жизнь <br class="photos__title-break"> в израиле</h2>
+    <p class="photos__text"> Помимо учёбы, в рамках программе у вас будет возможность путешествовать по стране и познакомиться с богатой культурно-исторической жизнью Израиля и его жителей</p>
+    <div class="photos__container">
+      <div class="photos__main">
+        <img class="photos__main-image big-screen" width="482" height="732" src="img/slider-01-desktop@1x.png" alt="Мечеть"
+             srcset="img/slider-01-desktop@2x.png">
+        <p class="photos__main-text">Экскурсии по Израилю <br> и знакомство с его историей</p>
+      </div>
+      <div class="photos__wrapper">
+        <div class="photos__line">
+          <div class="photos__item small-item">
+            <img class="photos__item-image" width="211" height="318" src="img/slider-02-desktop@1x.png" alt="Студент"
+                 srcset="img/slider-02-desktop@2x.png">
+            <p class="photos__item-text">Изучение <br> иврита</p>
+          </div>
+          <div class="photos__item big-item">
+            <img class="photos__item-image" width="411" height="318" src="img/slider-03-desktop@1x.png" alt="Студенты"
+                 srcset="img/slider-03-desktop@2x.png">
+            <p class="photos__item-text">Обучение современным <br> навыкам и профессиям</p>
+          </div>
+        </div>
+
+        <div class="photos__line">
+          <div class="photos__item big-item">
+            <img class="photos__item-image" width="411" height="318" src="img/slider-04-desktop@1x.png" alt="Студенты"
+                 srcset="img/slider-04-desktop@2x.png">
+            <p class="photos__item-text">Совместные творческие проекты <br>
+              с израильской молодёжью
+            </p>
+          </div>
+          <div class="photos__item small-item">
+            <img class="photos__item-image" width="230" height="318" src="img/slider-05-desktop@1x.png" alt="Закат"
+                 srcset="img/slider-05-desktop@2x.png">
+            <p class="photos__item-text">Развитие лидерства</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="photos__slider">
+      <div class="photos__slider-item slide photos__slider-item--active">
+        <img class="slide__image" width="288" height="400" src="img/slider-01-phone@1x.png" alt="Закат"
+             srcset="img/slider-01-phone@2x.png">
+        <p class="slide__title">Экскурсии по Израилю и знакомство с его историей</p>
+      </div>
+
+      <div class="photos__slider-item slide">
+        <img class="slide__image" width="288" height="400" src="img/slider-02-phone@1x.png" alt="Студент"
+             srcset="img/slider-02-phone@2x.png">
+        <p class="slide__title">Изучение иврита</p>
+      </div>
+
+      <div class="photos__slider-item slide">
+        <img class="slide__image" width="288" height="400" src="img/slider-03-phone@1x.png" alt="Студенты"
+             srcset="img/slider-03-phone@2x.png">
+        <p class="slide__title">Обучение современным навыкам и профессиям</p>
+      </div>
+
+      <div class="photos__slider-item slide">
+        <img class="slide__image" width="288" height="400" src="img/slider-04-phone@1x.png" alt="Студенты"
+             srcset="img/slider-04-phone@2x.png">
+        <p class="slide__title">Совместные творческие проекты
+          с израильской молодёжью
+        </p>
+      </div>
+
+      <div class="photos__slider-item slide">
+        <img class="slide__image" width="288" height="400" src="img/slider-05-phone@1x.png" alt="Закат"
+             srcset="img/slider-05-phone@2x.png">
+        <p class="slide__title">Развитие лидерства</p>
+      </div>
+
+    </div>
+    <div class="photos__controls">
+      <span class="photos__controls-btn photos__controls-btn--active"></span>
+      <span class="photos__controls-btn"></span>
+      <span class="photos__controls-btn"></span>
+      <span class="photos__controls-btn"></span>
+      <span class="photos__controls-btn"></span>
+    </div>
+
+  </section>
+
+<!--  <section class="blogs">-->
+<!--    <div class="blogs__container">-->
+<!--      <img class="blogs__image big-screen" width="1361" height="583" src="img/photo-desktop@1x.png" alt="Юноша и девушка на вершине холма"-->
+<!--           srcset="img/photo-desktop@2x.png">-->
+
+<!--      <img class="blogs__image small-screen" width="320" height="391" src="img/photo-phone@1x.png" alt="Юноша и девушка на вершине холма"-->
+<!--           srcset="img/photo-phone@2x.png">-->
+
+<!--      <div class="blogs__wrapper">-->
+<!--        <h2 class="blogs__title">#masaisrael</h2>-->
+<!--        <p class="blogs__text">Познакомьтесь с программой  от первого лица! Многие участники ведут блоги и фотодневники о  жизни, учёбе и путешествиях в Израиле.</p>-->
+<!--        <button class="button blogs__button">-->
+<!--          <img src="img/blogs-bg-button-24-24.png" alt="" class="blogs__button-image">-->
+<!--          смотреть фото</button>-->
+<!--      </div>-->
+<!--    </div>-->
+
+<!--  </section>-->
+
+<!--  <section class="questions">-->
+<!--    <div class="questions__container">-->
+<!--      <div class="questions__content">-->
+<!--        <h2 class="questions__title">частые вопросы</h2>-->
+<!--        <ul class="questions__list">-->
+<!--          <li class="questions__item question">-->
+<!--            <div class="question__row">-->
+<!--              <span class="question__number">1</span>-->
+<!--              <p class="question_text">Кто организатор? Какие сроки у программы?</p>-->
+<!--            </div>-->
+<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
+<!--          </li>-->
+<!--          <li class="questions__item question">-->
+<!--            <div class="question__row">-->
+<!--              <span class="question__number">2</span>-->
+<!--              <p class="question_text">Что такое грант на обучение?</p>-->
+<!--            </div>-->
+<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
+<!--          </li>-->
+<!--          <li class="questions__item question">-->
+<!--            <div class="question__row">-->
+<!--              <span class="question__number">3</span>-->
+<!--              <p class="question_text">Как определяется стоимость программы?</p>-->
+<!--            </div>-->
+<!--            <p class="question__answer">Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>-->
+<!--          </li>-->
+<!--          <li class="questions__item question">-->
+<!--            <div class="question__row">-->
+<!--              <span class="question__number">4</span>-->
+<!--              <p class="question_text">Что такое грант на обучение?</p>-->
+<!--            </div>-->
+<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
+<!--          </li>-->
+<!--          <li class="questions__item question">-->
+<!--            <div class="question__row">-->
+<!--              <span class="question__number">5</span>-->
+<!--              <p class="question_text">Признаётся ли учеба в рамках проекта для дальнейшего обучения?</p>-->
+<!--            </div>-->
+<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
+<!--          </li>-->
+<!--          <li class="questions__item question">-->
+<!--            <div class="question__row">-->
+<!--              <span class="question__number">6</span>-->
+<!--              <p class="question_text">Как выглдядит полный процесс регистрации на программу «Маса»?</p>-->
+<!--            </div>-->
+<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--      <div class="questions__image">-->
+<!--        <img class=" big-screen" width="645" height="803" src="img/questions-desktop@1x.png" alt="Студенты"-->
+<!--             srcset="img/questions-desktop@2x.png">-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </section>-->
+
+
+
 </main>
 
-
+<!--===================== modals =====================-->
 <div class="modal-order">
   <div class="modal-order__close">
     <button href="#" class="modal-order__close-btn" aria-label="Закрыть"><span class="visually-hidden">X</span></button>
@@ -269,21 +459,24 @@
   </p>
   <form action="" id="form" class="modal-order__form">
     <div class="modal-order__form-container">
-      <p class="modal-order__form-field">
-        <input type="text" id="modal-username" class="modal-order__form-input" placeholder="Имя" required>
+      <p class="modal-order__form-field username">
+        <input  type="text" id="modal-username" class="modal-order__form-input" placeholder="Имя" onblur="return checkNameField();" onfocus="return setNameFocus()">
+<!--        onblur="return checkNameField();" onfocus="return setNameFocus()-->
+        <small class="small-name">Ошибка: неверный формат </small>
       </p>
-
       <p class="modal-order__form-field">
-        <input type="text" id="modal-phone" class="modal-order__form-input" placeholder="Телефон" required>
+        <input  type="text" name="phone-number" id="modal-phone" class="modal-order__form-input" placeholder="Телефон" onblur="return checkPhoneField();" onfocus="return setPhoneFocus()">
+<!--        onblur="return checkPhoneField();" onfocus="return setPhoneFocus()"-->
+        <small class="small-phone">Ошибка: неверный формат </small>
       </p>
     </div>
 
 
     <div class="modal-order__wrapper agreement">
       <div class="agreement__wrapper">
+        <input type="checkbox" id="modal-agreement" class="agreement__inp visually-hidden">
         <label for="modal-agreement" class="agreement__label">Нажимая на кнопку, вы даёте согласие на обработку
           персональных данных </label>
-        <input type="checkbox" id="modal-agreement" class="agreement__inp visually-hidden">
       </div>
 
       <button type="submit" class="button modal-order__btn"> перезвоните мне</button>
@@ -306,5 +499,8 @@
   <button type="submit" class="button modal-successes__btn"> Понятно</button>
 </div>
 <div class="layout"></div>
+
+<script src="js/modal.js"></script>
+<script src="js/phone.js"></script>
 </body>
 </html>
