--- a/source/index.html
+++ b/source/index.html
@@ -368,80 +368,86 @@
 
   </section>
 
-<!--  <section class="blogs">-->
-<!--    <div class="blogs__container">-->
-<!--      <img class="blogs__image big-screen" width="1361" height="583" src="img/photo-desktop@1x.png" alt="Юноша и девушка на вершине холма"-->
-<!--           srcset="img/photo-desktop@2x.png">-->
+  <section class="blogs">
+    <div class="blogs__container">
+      <img class="blogs__image big-screen" width="1361" height="583" src="img/photo-desktop@1x.png" alt="Юноша и девушка на вершине холма"
+           srcset="img/photo-desktop@2x.png">
 
-<!--      <img class="blogs__image small-screen" width="320" height="391" src="img/photo-phone@1x.png" alt="Юноша и девушка на вершине холма"-->
-<!--           srcset="img/photo-phone@2x.png">-->
+      <img class="blogs__image small-screen" width="320" height="391" src="img/photo-phone@1x.png" alt="Юноша и девушка на вершине холма"
+           srcset="img/photo-phone@2x.png">
 
-<!--      <div class="blogs__wrapper">-->
-<!--        <h2 class="blogs__title">#masaisrael</h2>-->
-<!--        <p class="blogs__text">Познакомьтесь с программой  от первого лица! Многие участники ведут блоги и фотодневники о  жизни, учёбе и путешествиях в Израиле.</p>-->
-<!--        <button class="button blogs__button">-->
-<!--          <img src="img/blogs-bg-button-24-24.png" alt="" class="blogs__button-image">-->
-<!--          смотреть фото</button>-->
-<!--      </div>-->
-<!--    </div>-->
+      <div class="blogs__wrapper">
+        <h2 class="blogs__title">#masaisrael</h2>
+        <p class="blogs__text">Познакомьтесь с программой <br class="blogs__text--break">  от первого лица! Многие участники ведут блоги и фотодневники <br class="blogs__text--break"> о  жизни, учёбе и путешествиях <br class="blogs__text--break"> в Израиле.</p>
+        <button class="button blogs__button">
+          <img src="img/blogs-bg-button-24-24.png" alt="" class="blogs__button-image">
+          смотреть фото</button>
+      </div>
+    </div>
 
-<!--  </section>-->
+  </section>
 
-<!--  <section class="questions">-->
-<!--    <div class="questions__container">-->
-<!--      <div class="questions__content">-->
-<!--        <h2 class="questions__title">частые вопросы</h2>-->
-<!--        <ul class="questions__list">-->
-<!--          <li class="questions__item question">-->
-<!--            <div class="question__row">-->
-<!--              <span class="question__number">1</span>-->
-<!--              <p class="question_text">Кто организатор? Какие сроки у программы?</p>-->
-<!--            </div>-->
-<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
-<!--          </li>-->
-<!--          <li class="questions__item question">-->
-<!--            <div class="question__row">-->
-<!--              <span class="question__number">2</span>-->
-<!--              <p class="question_text">Что такое грант на обучение?</p>-->
-<!--            </div>-->
-<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
-<!--          </li>-->
-<!--          <li class="questions__item question">-->
-<!--            <div class="question__row">-->
-<!--              <span class="question__number">3</span>-->
-<!--              <p class="question_text">Как определяется стоимость программы?</p>-->
-<!--            </div>-->
-<!--            <p class="question__answer">Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>-->
-<!--          </li>-->
-<!--          <li class="questions__item question">-->
-<!--            <div class="question__row">-->
-<!--              <span class="question__number">4</span>-->
-<!--              <p class="question_text">Что такое грант на обучение?</p>-->
-<!--            </div>-->
-<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
-<!--          </li>-->
-<!--          <li class="questions__item question">-->
-<!--            <div class="question__row">-->
-<!--              <span class="question__number">5</span>-->
-<!--              <p class="question_text">Признаётся ли учеба в рамках проекта для дальнейшего обучения?</p>-->
-<!--            </div>-->
-<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
-<!--          </li>-->
-<!--          <li class="questions__item question">-->
-<!--            <div class="question__row">-->
-<!--              <span class="question__number">6</span>-->
-<!--              <p class="question_text">Как выглдядит полный процесс регистрации на программу «Маса»?</p>-->
-<!--            </div>-->
-<!--            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>-->
-<!--          </li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--      <div class="questions__image">-->
-<!--        <img class=" big-screen" width="645" height="803" src="img/questions-desktop@1x.png" alt="Студенты"-->
-<!--             srcset="img/questions-desktop@2x.png">-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </section>-->
+  <section class="questions">
+    <div class="questions__container">
+      <div class="questions__content">
+        <h2 class="questions__title">частые вопросы</h2>
+        <ul class="questions__list">
+          <li class="questions__item question">
+            <div class="question__row">
+              <span class="question__number">1</span>
+              <p class="question__text">Кто организатор? Какие сроки у программы?</p>
+              <button class="question__btn"></button>
+            </div>
+            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>
+          </li>
+          <li class="questions__item question">
+            <div class="question__row">
+              <span class="question__number">2</span>
+              <p class="question__text">Что такое грант на обучение?</p>
+              <button class="question__btn"></button>
+            </div>
+            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>
+          </li>
+          <li class="questions__item question">
+            <div class="question__row">
+              <span class="question__number">3</span>
+              <p class="question__text">Как определяется стоимость программы?</p>
+              <button class="question__btn"></button>
+            </div>
+            <p class="question__answer question__answer--visible">Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+          </li>
+          <li class="questions__item question">
+            <div class="question__row">
+              <span class="question__number">4</span>
+              <p class="question__text">Что такое грант на обучение?</p>
+              <button class="question__btn"></button>
+            </div>
+            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>
+          </li>
+          <li class="questions__item question">
+            <div class="question__row">
+              <span class="question__number">5</span>
+              <p class="question__text">Признаётся ли учеба в рамках проекта для дальнейшего обучения?</p>
+              <button class="question__btn"></button>
+            </div>
+            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>
+          </li>
+          <li class="questions__item question">
+            <div class="question__row">
+              <span class="question__number">6</span>
+              <p class="question__text">Как выглдядит полный процесс регистрации на программу «Маса»?</p>
+              <button class="question__btn"></button>
+            </div>
+            <p class="question__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore doloremque expedita, nam nostrum numquam quia ratione repellat sint velit veniam voluptates? Alias aliquam est perspiciatis quia ratione. Incidunt, numquam.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="questions__image">
+        <img class=" big-screen" width="645" height="803" src="img/questions-desktop@1x.png" alt="Студенты"
+             srcset="img/questions-desktop@2x.png">
+      </div>
+    </div>
+  </section>
 
 
 
